# messageAnalysis

./: .gitignore  Cargo.toml  README.md  example.txt
src/: attributed_text.rs  imessage_fetch.rs  instagram_fetch.rs  main.rs  message_analysis.rs  messages.rs  msg_util.rs
