[package]
name = "imessage-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.31.0"
chrono = "0.4.34"
chrono-tz = "0.8.6"
serde_json = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
simdutf8 = "0.1.4"
encoding = "0.2.33"